--- a/ios/Sources/Game2048iOS/index.html
+++ b/ios/Sources/Game2048iOS/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2048 Game</title>
+    <title>2248 Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>2048</h1>
+            <h1>2248</h1>
             <div class="scores">
                 <div class="score-box">
                     <span class="score-label">SCORE</span>
@@ -19,10 +19,13 @@
                     <span class="score-label">BEST</span>
                     <span id="best-score">0</span>
                 </div>
+                <div class="score-box">
+                    <span class="score-label">MAX</span>
+                    <span id="max-tile">0</span>
+                </div>
             </div>
             <div class="controls">
                 <button id="new-game">New Game</button>
-                <button id="undo">Undo</button>
                 <button id="theme-toggle">Toggle Theme</button>
             </div>
         </div>
