Implement playable 2248 game

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2048 Game</title>
+    <title>2248 Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>2048</h1>
+            <h1>2248</h1>
             <div class="scores">
                 <div class="score-box">
                     <span class="score-label">SCORE</span>
@@ -28,6 +28,6 @@
         </div>
         <div class="game-board"></div>
     </div>
-    <script src="game.js"></script>
+    <script src="game2248.js"></script>
 </body>
 </html>
